[gd_scene load_steps=5 format=3 uid="uid://c1jxvm0yinlvc"]

[ext_resource type="Script" path="res://Scripts/soldier.gd" id="1_2ggi4"]
[ext_resource type="Texture2D" uid="uid://cam4v2yvog0xp" path="res://Sprites/pixil-frame-0.png" id="1_s8on1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2n5fn"]
size = Vector2(94.2354, 119.013)

[sub_resource type="CircleShape2D" id="CircleShape2D_p075v"]

[node name="soldier" type="CharacterBody2D" groups=["soldiers"]]
collision_layer = 2
collision_mask = 523
input_pickable = true
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_2ggi4")
speed = 100

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, 4)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_s8on1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(0.198752, 0.142841)
shape = SubResource("RectangleShape2D_2n5fn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 50.0
path_postprocessing = 1
avoidance_enabled = true
radius = 100.0
max_neighbors = 1
avoidance_priority = 0.0
debug_use_custom = true
debug_path_custom_line_width = 6.77

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 521

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
scale = Vector2(30, 30)
shape = SubResource("CircleShape2D_p075v")

[node name="BulletTimer" type="Timer" parent="."]
one_shot = true

[node name="Line2D" type="Line2D" parent="."]
width = 5.0
default_color = Color(0.0823529, 0.301961, 1, 1)

[node name="lineTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="lineTimer" to="." method="_on_line_timer_timeout"]
